--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html>
 <head>
     <title>Elite USDT - Professional Services</title>
-    <style>
-        body { font-family: Arial; text-align: center; padding: 50px; background: #f0f0f0; }
-        .container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 0 10px gray; max-width: 600px; margin: auto; }
-        h1 { color: #0066cc; }
-        .btn { background: #0066cc; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 20px; }
-    </style>
 </head>
-<body>
-    <div class="container">
-        <h1>🚀 Elite USDT Services</h1>
-        <p>Welcome to our professional platform!</p>
-        <p>Fast | Secure | Reliable</p>
-        <a href="mailto:contact@example.com" class="btn">Contact Us</a>
-        <p style="margin-top: 30px; color: gray;">Your website is live!</p>
-    </div>
+<body style="font-family: Arial; text-align: center; padding: 50px;">
+    <h1 style="color: blue;">🚀 Elite USDT</h1>
+    <p>Welcome to our professional platform!</p>
+    <p>Fast • Secure • Reliable</p>
+    <p>📍 Live on Render</p>
 </body>
 </html>
